# Iris

./: .editorconfig  .env.sample  .eslintrc.js  .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  docker-compose.yml  index.js  nx.json  package-lock.json  package.json  translation.xml  tsconfig.json
apps/client/: BUILD.bazel  index.ts
commands/: date.js  help.js  invite.js  name.js  no.js  pause.js  ping.js  play.js  playlist.js  resume.js  stop.js
events/: disconnect.js  error.js  message.js  ready.js
models/: Playlist.js
modules/: translation.js
