load("@npm//typescript:index.bzl", "tsc")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

srcs = glob(["*.ts"])
deps = [
  "@npm//@types/node",
]

tsc(
  name = "client",
  data = srcs + deps,
  outs = [s.replace(".ts", ext) for ext in [".js", ".d.ts"] for s in srcs],
  args = [
    "--outDir",
    "$(RULEDIR)",
    "--lib",
    "es2017,dom",
    "--downlevelIteration",
    "--declaration",
    "--resolveJsonModule",
    "--esModuleInterop",
  ] + [
    "$(location %s)" % s
    for s in srcs
  ],
)

nodejs_binary(
  name = "devserver",
  data = [
    ":client",
  ],
  entry_point = ":index.ts",
)
